--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "rn-sprite",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "src/index.js",
   "dependencies": {
     "gl-react": "^2.2.8",
     "gl-react-native": "^2.36.0"
+  },
+  "repository" : { 
+    "type" : "git",
+    "url" : "https://github.com/adhbh/rn-sprite.git"
   }
 }
